--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,11 @@
     "repositories": [
         {
             "name": "CashpointBundle",
-            "url": ""
+            "url": "git@bitbucket.org:tritar/cashpointbundle.git"
         }
     ],
     "require": {
         "php": "^7.1.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "Dotit\\CashpointBundle\\": "src/"
-
-        }
     }
+
 }
