--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,13 @@
         }
     ],
     "minimum-stability": "dev",
-    "repositories": [
-        {
-            "name": "CashpointBundle",
-            "url": "https://github.com/Tritaryosri/CashPoint.git'"
-        }
-    ],
+
     "require": {
         "php": "^7.1.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Dotit\\CashpointBundle\\": "CashpointBundle/"
+        }
     }
-
 }
