--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "triteryosri@gmail.com"
         }
     ],
-
+    "minimum-stability": "stable",
 
     "require": {
         "php": "^7.1.3"
