--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "triteryosri@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
 
     "require": {
         "php": "^7.1.3"
